Add IMDSv2 support to AwsCandidateHarvester and replace URLConnection… (#297)
* Add IMDSv2 support to AwsCandidateHarvester and replace URLConnection with HttpRequest
---------

Co-authored-by: Daniil Meitis <daniil.meitis@viber.com>